<resources>
    <string name="app_name">BGC</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_screen_fragment">Ekran główny</string>
    <string name="configuration_fragment">Konfiguracja</string>
    <string name="synchronization_fragment">Synchronizacja</string>
    <string name="history_fragment">Historia rankingu</string>
    <string name="games_fragment">Lista gier</string>
    <string name="add_ons_fragment">Lista dodatków</string>
    <string name="username">Nazwa użytkownika:</string>
    <string name="number_of_games">Liczba gier:</string>
    <string name="number_of_add_ons">Liczba dodatków:</string>
    <string name="last_sync_date">Data ostatniej synchronizacji:</string>
    <string name="game_list">Lista gier</string>
    <string name="add_ons_list">Lista dodatków</string>
    <string name="synchronize">Synchronizuj</string>
    <string name="clear_data">Wyczyść dane</string>
    <string name="title_desc">Tytuł \u2193</string>
    <string name="release_desc">Rok \u2193</string>
    <string name="ranking_desc">Ranking \u2193</string>
    <string name="title_asc">Tytuł \u2191</string>
    <string name="release_asc">Rok \u2191</string>
    <string name="ranking_asc">Ranking \u2191</string>
    <string name="lp">Lp.</string>
    <string name="title">Tytuł</string>
    <string name="release">Rok</string>
    <string name="ranking">Ranking</string>
    <string name="downloading">Pobieranie</string>
    <string name="loadingGames">Wczytywanie gier</string>
    <string name="loadingAddOns">Wczytywanie dodatków</string>
    <string name="enter_username">Podaj nazwę użytkownika</string>
    <string name="save">Zapisz</string>
    <string name="sync_date">Data synchronizacji</string>
</resources>