<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Synchronization">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="Ostatnio synchronizowano:"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lastSyncText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="TextView"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/downloadLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:id="@+id/downloadingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/downloading" />

        <ProgressBar
            android:id="@+id/downloadProgress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loadGamesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:id="@+id/loadGamesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loadingGames" />

        <ProgressBar
            android:id="@+id/laodGamesProgress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loadAddOnsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:id="@+id/loadAddOnsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loadingAddOns" />

        <ProgressBar
            android:id="@+id/laodAddOnsProgress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <Button
        android:id="@+id/synchronizeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/synchronize" />


</LinearLayout>